# nbp_rates

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
nbp_rates/: __init__.py  nbp_rates.py  online_fetcher.py
nbp_rates/currencies/: curr_aed.py  curr_afa.py  curr_afn.py  curr_all.py  curr_amd.py  curr_ang.py  curr_aoa.py  curr_aon.py  curr_ars.py  curr_ats.py  curr_aud.py  curr_awg.py  curr_azn.py  curr_bam.py  curr_bbd.py  curr_bdt.py  curr_bec.py  curr_bgl.py  curr_bgn.py  curr_bhd.py  curr_bif.py  curr_bnd.py  curr_bob.py  curr_brl.py  curr_bsd.py  curr_bwp.py  curr_byb.py  curr_byn.py  curr_byr.py  curr_bzd.py  curr_cad.py  curr_cdf.py  curr_chf.py  curr_clp.py  curr_cny.py  curr_cop.py  curr_crc.py  curr_csd.py  curr_cup.py  curr_cve.py  (+159 more)
tests/: test_nbp_lib.py
